--- a/views/exercises/new.ejs
+++ b/views/exercises/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
 
-<h4 class="text-bg-warning p-3" >Add An Exercise To Your Bundle!</h4>
+<br><br><h4 class="text-bg-warning p-3" >Add An Exercise To Your Bundle!</h4><br><br>
 
 
 <div>
