fixed edit rating input name & adding a space between review and the dynamically rendered groupRep review data

--- a/views/groupReps/new.ejs
+++ b/views/groupReps/new.ejs
@@ -17,7 +17,7 @@
 
     <label class="form-label">Exercise Rating</label>
     <p>How benefitial did you find this exercise to your recovery? </p>
-    <input class="form-control" type="number" name="sets" min="1" max="10" placeholder="6"><br>
+    <input class="form-control" type="number" name="rating" min="1" max="10" placeholder="6"><br>
 
     <label class="form-label">Video Link:</label>
     <input 
