--- a/views/exercises/new.ejs
+++ b/views/exercises/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
 
-<br><br><h4 class="text-bg-warning p-3" >Add An Exercise To Your Bundle!</h4><br><br>
+<br><br><h4 class=" border border-black text-bg-warning p-3 fs-3" >Add An Exercise To Your Bundle!</h4><br><br>
 
 
 <div>
@@ -27,7 +27,7 @@
         class="form-control"
     ><br>
 
-    <button class="btn btn-warning" type="submit">Add Exercise</button>
+    <button class="btn btn-warning fs-5" type="submit">Add</button>
     </form> 
 </div>
 
