--- a/views/groupReps/new.ejs
+++ b/views/groupReps/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
-<br><h2 class="text-bg-warning p-3">Share Exercise Details</h2><br><br>
-<p>Help heal the Butter community with your favourite exercises!</p>
+<br><h2 class="border border-black text-bg-warning p-3 mt-3">Share Exercise Details</h2><br><br>
+<p class="fs-4">Help heal the Butter community with your favourite exercises!</p>
 <div>
     <form  action="/groupReps" method="POST">  
     <label class="form-label">Exercise Name:</label>
@@ -21,7 +21,7 @@
         pattern="https://.*"
         class="form-control"
     ><br>
-    <button class="btn btn-warning" type="submit">Share Exercise</button>
+    <button class=" btn btn-warning fs-5" type="submit">Share</button>
     </form> 
 </div>
 <%- include('../partials/footer') %>
