--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
     </div>
-    <br><br><footer>
+    <br><br><footer class="">
         <div class="bg-warning text-center fst-italic">Best start on any recover journy is to follow the R.I.C.E Protocol </div>
         <div class="bg-warning text-center opacity-23 fst-italic" id="smooth"> Smooth Like Butter</div>
     </footer>
