--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,17 +13,17 @@
     </head>
         <nav class="navbar navbar-expand-md bg-warning ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">BUTTER</a>
+                <a class="navbar-brand fs-4" href="/profiles" >BUTTER</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class=" text-end collapse navbar-collapse " id="navbarNavAltMarkup">
                 <% if (user) { %>
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/exercises">Exercise Plan</a>
-                        <a class="nav-link active" href="/groupReps">Butter Bunch</a>
-                        <a class="nav-link active" href="/profiles" >Profile</a>
-                        <a class="nav-link active" href="/logout">Log Out</a>
+                    <div class="navbar-nav ">
+                        <a class="nav-link active m-1" aria-current="page" href="/exercises">Exercise Plan</a>
+                        <a class="nav-link active m-1" href="/groupReps">Butter Bunch</a>
+                        <a class="nav-link active m-1" href="/profiles" >Profile</a>
+                        <a class="nav-link active m-1" href="/logout">Log Out</a>
                 <% } else { %>
                         <a class="nav-link text-end" href="/auth/google">Log In</a>
                 <% } %>
