--- a/views/profiles/new.ejs
+++ b/views/profiles/new.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header') %>
 <div class="userInfo">
-    <h2>Ready to enter some infomation ?</h2>
+    <h2 class="mt-4">Ready to enter some infomation ?</h2>
 </div><br><br>
-<div class="text-bg-warning p-3">
+<div class="border border-black text-bg-warning p-3">
     <h4>Tell Us Your Recovery Goal</h4>
     <p>Goal setting is a fundamental part of treatment. They provide you with direction and inspiration through the tought times.</p>
 </div><br><br>
@@ -17,7 +17,7 @@
             <label class="form-label">How many Sessions per week</label>
             <input class="form-control" type="number" name="trainingamount" min="1" max="10"><br>
 
-            <button class="btn btn-warning" type="submit">Add Your Goal</button>
+            <button class="btn btn-warning fs-5" type="submit">Add Goal</button>
         </div>
     </form>
 <%- include('../partials/footer') %>
