--- a/views/exercises/index.ejs
+++ b/views/exercises/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<br><br><h3 class="text-bg-warning p-3">Exercise Bundle</h3><br><br>
+<br><br><h3 class=" border border-black text-bg-warning p-3 fs-2">Exercise Bundle</h3><br><br>
 
 <div class="container text-center" >
   <div class="row row-cols-auto justify-content-evenly">
@@ -45,7 +45,7 @@
   </div>
   <br>
   <div>
-    <a class="btn btn-warning" href="/exercises/new">Add New Exercise</a>
+    <a class="btn btn-warning fs-5" href="/exercises/new">Add Exercise</a>
   </div>
 </div>
 
