--- a/views/groupReps/index.ejs
+++ b/views/groupReps/index.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header') %>
-<br><br><h3 class="text-bg-warning p-3">Butter Bunch </h3><br><br>
+<br><br><h3 class="border border-black text-bg-warning p-3 fs-2">Butter Bunch </h3><br><br>
 <div class="container text-center" >
   <div class="row row-cols-auto justify-content-evenly">
     <% if (groupReps.length) { %>
