--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <div class="text-center" style="flex-grow:1">
       <br><br><p class="lead fs-3"> We all find it hard to remember to do our physio exercises at home. Butter is here to help. In this app you will be able to log your exercierses, and keep track of how often you need to get them done. Our aim is help you reach your recovery goals faster, and get your joints feeling as smooth as butter!  </p>
     </div><br><br>
-    <div class="d-grid gap-2 col-6 mx-auto"> <a class= " align-items-center btn btn-warning " href="/auth/google">Log In</a></div>
+    <div class="d-grid gap-2 col-6 mx-auto"> <a class= " border border-black fs-4 align-items-center btn btn-warning  " href="/auth/google">Log In</a></div>
   </div>
 
 
